# ledgerframe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  NOTICE  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  worker.py
app/ai/: grounding.py  intent.py  prompt_builder.py  prompts.py  safety.py  tools.py  vocabulary.py
app/api/: deps.py
app/core/: config.py  disclaimer.py  egress.py  envfile.py  logging.py  metrics.py  money.py  observability.py  provenance.py  ratelimit.py  security.py  service_control.py  symbols.py  twr.py  xirr.py
app/db/: base.py  migrate.py  upsert.py
app/models/: __init__.py
app/schemas/: ai.py  common.py
app/seed/: demo.py
app/services/: accounts.py  acquire.py  amfi.py  analytics.py  api_tokens.py  audit.py  backfill.py  backup.py  briefing.py  coingecko.py  confidence.py  contributions.py  cost_of_ownership.py  coverage.py  csv_import.py  ecb_fx.py  estate.py  feeds.py  figure_registry.py  fx.py  fx_history.py  help.py  help_markup.py  identity.py  ingest_guard.py  insurance.py  kite.py  legal.py  liquidity.py  market.py  planning.py  policy.py  portfolio.py  reports_pack.py  review.py  runway.py  scenarios.py  sessions.py  statements.py  tags.py  (+1 more)
docs/: openapi.json
docs/adr/: 0001-keep-legacy-alembic-chain.md  0002-frontend-stack-react-vite.md  0004-playwright-overflow-suite.md
docs/audit/: 01-FEATURE-INVENTORY.md  02-DATA-MODEL.md  03-API-SURFACE.md  04-CALCULATION-ENGINE.md  05-PROVIDERS-AND-ROUTING.md  06-UI-AND-TERMINOLOGY-AUDIT.md  07-SECURITY-POSTURE.md  08-TECH-DEBT.md  09-GLOSSARY.md  ASSETS.md  CLA-OPTIONS.md  DECISIONS.md  ISSUES-DISCLAIMER.PROPOSED.md  LICENSES.md  OPEN-QUESTIONS.md  SECURITY.md.PROPOSED  TESTED-ON.template.md
docs/plans/: CURRENT.md  RATIFICATION.md  REVIEW-GUIDE.md  TEMPLATE-page-build.md  ai-surfaces.md  backend-copy-in.md  data-feed-routing.md  design-system-build.md  intraday-series.md  page-accounts.md  page-cash-flow.md  page-chrome.md  page-estate.md  page-first-run-checklist.md  page-heatmap.md  page-help.md  page-holdings.md  page-home.md  page-instrument-detail.md  page-insurance.md  page-legal.md  page-markets.md  page-news.md  (+17 more)
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vite.prepass.config.ts
scripts/: backup.sh  benchmark.sh  check_api_contract.py  db_migrate.py  dev.sh  doctor.sh  gen_openapi.py  install.sh  lf-admin.sh  license_audit.py  reset-demo-data.sh  restore.sh  start-dev.sh  uninstall.sh  update.sh
systemd/: ledgerframe-api.service  ledgerframe-kiosk.service  ledgerframe-voice.service  ledgerframe-worker.service
tests/: conftest.py  isolation.py
(+479 files in other folders)
