[project]
name = "ledgerframe"
version = "3.24.0"
description = "Local-first personal financial intelligence display for Raspberry Pi 5 + Hailo AI HAT+ 2"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "LedgerFrame" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "tenacity>=9.0",
]

[project.optional-dependencies]
voice = [
    "vosk>=0.3.45",
    "sounddevice>=0.5",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    # ⊕ R-54 (owner+architect ruling 2026-07-23) — DECLARE the randomizer that had only ever been an
    # ad-hoc venv install. The randomized verdict silently vanished between sessions because nothing
    # here listed it, so a venv reinstall from `[dev]` dropped it; a prior report then mis-attributed
    # its absence to an ADR gate (no ADR gates randomization — the KB's four ADRs verified). It is a
    # long-standing test tool, not a new capability, so it needs no ADR; declaring it makes both the
    # ordered AND randomized verdicts reproducible at every gate rather than dependent on a warm venv.
    "pytest-randomly>=3.15",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]
# Postgres drivers (§2.2, flagged/experimental — SQLite remains the default). async for the
# app, sync (psycopg) for Alembic. Only needed to run the suite against Postgres.
postgres = [
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
]

[project.scripts]
ledgerframe = "app.main:run"

[build-system]
requires = ["hatchling>=1.27"]  # >=1.27 understands the PEP 639 SPDX license expression
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = [
    "B008",    # FastAPI Depends() in defaults is idiomatic
    "E501",    # long lines tolerated (data tables, demo catalogs)
    "SIM105",  # try/except/pass is clearer than contextlib.suppress here
    "SIM117",  # nested with statements are fine for readability
    "UP042",   # str-enum subclassing is intentional for JSON serialisation
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
